# advent_of_code_2025

./: CMakeLists.txt
day1/: CMakeLists.txt  day1.cpp  day1.h
day10/: CMakeLists.txt  day10.cpp  loader.h
day11/: CMakeLists.txt
day12/: CMakeLists.txt  day12.cpp  load_data.cpp  load_data.h
day2/: CMakeLists.txt  day2.cpp  read_input.cpp  read_input.h
day3/: CMakeLists.txt  day3.cpp
day4/: CMakeLists.txt  day4.cpp
day5/: CMakeLists.txt  day5.cpp
day6/: CMakeLists.txt  day6.cpp
day7/: CMakeLists.txt  day7.cpp
day8/: CMakeLists.txt  day8.cpp
day9/: CMakeLists.txt  day9.cpp
tools/: CMakeLists.txt  helpers.cpp  helpers.h  long-int.cpp  long-int.h  matrix.h  range.h
